<?xml version="1.0"?>
<package format="3">
  <name>hsrb_rosnav</name>
  <version>2.0.0</version>
  <description>hsrb_rosnav meta package</description>
  <maintainer email="xr-hsr-support@mail.toyota.co.jp">HSR Support</maintainer>

  <license>BSD 3-clause Clear License</license>

  <author>Fukukazu Kawata</author>
  <author>Koji Terada</author>
  <author>Takafumi Mizuno</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>hsrb_mapping</exec_depend>
  <exec_depend>hsrb_rosnav_config</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
