<?xml version="1.0"?>
<package format="3">
  <name>hsrb_rosnav_config</name>
  <version>2.0.0</version>
  <description>The hsrb_rosnav_config package</description>

  <maintainer email="xr-hsr-support@mail.toyota.co.jp">HSR Support</maintainer>

  <license>BSD 3-clause Clear License</license>

  <author>Kazuhito Tanaka</author>
  <author>Koji Terada</author>
  <author>Nobuyuki Matsuno</author>
  <author>Takafumi Mizuno</author>
  <author>Tokyo Opensource Robotics Kyokai</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_rviz_plugins</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
